--- a/report/papers.bib
+++ b/report/papers.bib
@@ -1,3 +1,11 @@
+@misc{report_code,
+  title={Time Range Queries for Hereditary Properties},
+  key={report},
+  note={\url{https://github.com/mamikonyana/6.854-project-fall2016}},
+  month={December},
+  year={2016}
+}
+
 @InProceedings{bokal2015,
   author =	{Drago Bokal and Sergio Cabello and David Eppstein},
   title =	{{Finding All Maximal Subsequences with Hereditary Properties}},
