missing conclusion, needs proofreading

--- a/report/papers.bib
+++ b/report/papers.bib
@@ -62,3 +62,36 @@
   organization={IEEE}
 }
 
+@article{buchin2011finding,
+  title={Finding long and similar parts of trajectories},
+  author={Buchin, Kevin and Buchin, Maike and Van Kreveld, Marc and Luo, Jun},
+  journal={Computational Geometry},
+  volume={44},
+  number={9},
+  pages={465--476},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{gudmundsson2007efficient,
+  title={Efficient detection of patterns in 2D trajectories of moving points},
+  author={Gudmundsson, Joachim and van Kreveld, Marc and Speckmann, Bettina},
+  journal={Geoinformatica},
+  volume={11},
+  number={2},
+  pages={195--215},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{aronov2016segmentation,
+  title={Segmentation of trajectories on nonmonotone criteria},
+  author={Aronov, Boris and Driemel, Anne and Kreveld, Marc Van and L{\"o}ffler, Maarten and Staals, Frank},
+  journal={ACM Transactions on Algorithms (TALG)},
+  volume={12},
+  number={2},
+  pages={26},
+  year={2016},
+  publisher={ACM}
+}
+
