--- a/report/6.854-final_report.arsen.hayk.tex
+++ b/report/6.854-final_report.arsen.hayk.tex
@@ -277,7 +277,7 @@ range of points in the given sequence, we use a binary range tree.
     \label{fig:query_path}
     \caption{A search path finding $p = k^*(q) + 1$ of point $q$.
     The search goes up until it find a range where $p$ lies and
-    then goes down narrowing down the range until it reaches the
+    then goes down narrowing the range until it reaches the
     leaf $p$.
     Figure from \cite{chan2016}.}
 \end{figure}
@@ -409,7 +409,7 @@ potential problems where the algorithms could have been used.
 \begin{figure}[!ht]
   \centering
   \includegraphics[height=8cm]{../plots/monotonicity_moving_gaussian}
-  \caption{Property matrix for movement monotonicity for time intervals for a point moving steadily in $x$ direction with Gaussian noise with $\sigma_x = 0.05, \sigma_y = 1$.}
+  \caption{Property matrix for movement monotonicity for time intervals for a point moving steadily in $x$ direction with Gaussian noise with $\sigma_x = 0.05, \sigma_y = 1$. Average value of $j^*(i) - i = 1520$}
   \label{fig:monotonicity_demo}
 \end{figure}
 
@@ -500,7 +500,7 @@ on all the nodes.
   \centering
   \includegraphics[height=8cm]{../plots/diameter_random_walk}
   \caption{Property matrix for checking 1 distance \textbf{closeness}
-  on a random walk with step size 0.3}
+  on a random walk with step size 0.3. Average value of $j^*(i) - i = 1013$}
   \label{fig:diameter_demo}
 \end{figure}
 
