--- a/report/6.854-final_report.arsen.hayk.tex
+++ b/report/6.854-final_report.arsen.hayk.tex
@@ -29,7 +29,7 @@
 \begin{document}
 
 \title{Time Range Queries for Hereditary Properties \\ \large 6.854 Final Project}
-\author{Arsen Mamikonyan, Hayk Saribekyan}
+\author{Arsen Mamikonyan\thanks{arsen@mit.edu}, Hayk Saribekyan\thanks{hayks@mit.edu}}
 
 \maketitle
 
